@@ -1,3 +1,13 @@
+2011-10-02  Murray Cumming  <murrayc@murrayc.com>
+
+	Find: Get criteria even when a field is on the layout twice.
+
+	* glom/mode_data/flowtablewithfields.cc: get_field_value(): 
+	Look at all the widgets for this field, instead of just the first one, 
+	and keep looking until we find a non-empty value.
+	This is still rather arbitrary, but this method is only used for 
+	find criteria, or should be.
+
 2011-09-29  Murray Cumming  <murrayc@murrayc.com>
 
 	Dialog_Choose_ID: Work around a crash in GTK+.
